--- a/index.html
+++ b/index.html
@@ -53,20 +53,15 @@
                 </div>
             </nav>
         </header>
+        <div class="intro_media_content_spacer"></div>                  
         <div class="intro_container">
-            <div class="intro_content">
-                <video class="intro_media_content" autoplay loop muted playsinline>
+            <video class="intro_media_content" autoplay loop muted playsinline>
                     <source src="intro/fajn_tajm_video.mp4" type="video/mp4">
-                    <!-- Add additional <source> elements for other video formats if needed -->
                     Your browser does not support the video tag.
-                  </video>                  
-                <div class="intro_scroll_down_div">
+            </video>
+            <div class="intro_scroll_down_div">
                     <span class="scroll_text">SCROLL</span>
                     <img class="scroll_arrow" src="svg/scroll_arrow.svg">
-                </div>
-            </div>
-            <div class="spacing_div" id="spacing_div">
-                <img class="spacer_image" src="intro/spacer.png">
             </div>
         </div>
         <div class="main_div">
