Header navbar scroll->color-change fixed.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </nav>
         </header>
-        <div class="intro_media_content_spacer"></div>                  
+        <div class="intro_media_content_spacer" id="spacer"></div>                  
         <div class="intro_container">
             <video class="intro_media_content" autoplay loop muted playsinline>
                     <source src="intro/fajn_tajm_video.mp4" type="video/mp4">
