responzive image, max-width 600px

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 <p>V místě otevírajícím se netknutosti hor v jemně zvlněných křivkách kopců pokrytých pestrobarevnými loukami.</p>
             </div>
             <div class="house_intro_container">
-                <div class="house_intro_pic_side">
-                    <img src="fajntajm_pics/house.jpg">
-                    <img src="fajntajm_pics/kitchen.jpg">
-                    <img src="fajntajm_pics/meet_room.jpg">
-                </div>
                 <div class="house_intro_text_side">
                     <div class="house_intro_text_side_sticky">
                         <h1>Dům</h1>
                         <p>Sluncem prozářené i chladivé prostory Vás osloví tradiční atmosférou venkovského stavení s jemnými moderními detaily.</p>
                         <a href="">Více o domě</a>
                     </div>
+                </div>
+                <div class="house_intro_pic_side">
+                    <img class="house_homepage_img" src="fajntajm_pics/house.jpg">
+                    <img class="house_homepage_img" src="fajntajm_pics/kitchen.jpg">
+                    <img class="house_homepage_img" src="fajntajm_pics/meet_room.jpg">
                 </div>
             </div>
             <div class="room_intro_container">
@@ -95,9 +95,9 @@
                     </div>
                 </div>
                 <div class="room_intro_pic_side">
-                    <img src="fajntajm_pics/pokoj1.jpg">
-                    <img src="fajntajm_pics/marie.jpg">
-                    <img src="fajntajm_pics/černá_voda_ubytování_pokoj.jpg">
+                    <img class="rooms_homepage_img" src="fajntajm_pics/pokoj1.jpg">
+                    <img class="rooms_homepage_img" src="fajntajm_pics/marie.jpg">
+                    <img class="rooms_homepage_img" src="fajntajm_pics/černá_voda_ubytování_pokoj.jpg">
                 </div>
             </div>
             <div class="wellness_intro_container">
