footer responsive and video content position fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="main_div">
             <div class="book" id="booking">
-                <a class="book_link" href="https://book.trevlix.com/book/app/?cid=188830&mode=window" target="_blank">REZERVACE</a>
+                <a class="book_link" href="https://book.trevlix.com/book/app/?cid=188830&mode=window" target="_blank">BOOK</a>
             </div>
             <div class="homepage_intro_text_div">
                 <h1>Ubytujte se v srdci Rychlebských hor.</h1>
