nearly finished(onyl comments section for mobile left)

--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
             </div>
             <div class="house_intro_container">
                 <div class="house_intro_text_side">
-                    <div class="house_intro_text_side_sticky">
+                    <div class="house_intro_text_side_sticky" id="house_intro_text_side_sticky">
                         <h1>Dům</h1>
                         <p>Sluncem prozářené i chladivé prostory Vás osloví tradiční atmosférou venkovského stavení s jemnými moderními detaily.</p>
                         <a href="">Více o domě</a>
                     </div>
                 </div>
-                <div class="house_intro_pic_side">
+                <div class="house_intro_pic_side" id="house_intro_pic_side">
                     <img class="house_homepage_img" src="fajntajm_pics/house.jpg">
-                    <img class="house_homepage_img" src="fajntajm_pics/kitchen.jpg">
+                    <img class="house_homepage_img" src="fajntajm_pics/kuchyn_new.jpg">
                     <img class="house_homepage_img" src="fajntajm_pics/meet_room.jpg">
                 </div>
             </div>
             <div class="room_intro_container">
                 <div class="room_intro_text_side">
-                    <div class="room_intro_text_side_sticky">
+                    <div class="room_intro_text_side_sticky" id="room_intro_text_side_sticky">
                         <h1>Pokoje</h1>
                         <p>Dům má 5 pokojů, každý s vlastní koupelnou. K dispozici je všem ubytovaným vybavená kuchyň, společenská místnost a prostor na úschovu maximálně 10ti kol.</p>
-                        <a href="">Pokoje</a>
+                        <a href="">Naše pokoje</a>
                     </div>
                 </div>
-                <div class="room_intro_pic_side">
+                <div class="room_intro_pic_side" id="room_intro_pic_side">
                     <img class="rooms_homepage_img" src="fajntajm_pics/pokoj1.jpg">
                     <img class="rooms_homepage_img" src="fajntajm_pics/marie.jpg">
                     <img class="rooms_homepage_img" src="fajntajm_pics/černá_voda_ubytování_pokoj.jpg">
@@ -115,15 +115,11 @@
                 </div>
                 <div class="wellness_intro_photo_container">
                     <div class="wellness_intro_img">
-                        <img src="fajntajm_pics/sprcha_wellness.jpg">
-                    </div>
-                    <div class="wellness_intro_img">
-                        <img src="fajntajm_pics/sauna a vstup.jpg">
-                    </div>
-                    <div class="wellness_intro_img">
-                        <img src="fajntajm_pics/sauna_zrcadlo.jpg">
+                        <img src="fajntajm_pics/wellness_newww.jpg">
+                        <a id="wellness_absolute" href="">Více o wellness</a>
                     </div>
                 </div>
+                <a href="">Více o Wellness</a>
             </div>
             <div class="comments_container">
                 <div class="comments_conatiner_row1">
