mobile comments segment carousel

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                 <div class="comments_conatiner_row1">
                     <h1>Naši hosté o nás</h1>
                 </div>
-                <div class="comments_conatiner_row2">
-                    <p>
+                <div class="comments_conatiner_row2" id="comments_conatiner_row2">
+                    <p id="comment">
                         "Klid a harmonie. Laskaví majitelé, kteří s maximální péčí a pokorou velmi citlivě zrekonstruovali starý objekt, a vnesli do něj nový život. Doporučuji!<br><br><span class="comments_names">Hana B.</span>
                     </p>
-                    <p>
+                    <p id="comment">
                         "Fajn TAJM a Dalešický pivovar jsou pro mne nejkrásnějšími místy která jsem navštívil.<br><br><span class="comments_names">Michal O.</span>
                     </p>
-                    <p>
+                    <p id="comment">
                         "Krásné místo, hned u Rychlebskych stezek. Určitě se vrátíme.<br><br><span class="comments_names">Pavel B.</span>
                     </p>
                 </div>
