First bar works on scroll

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 </div>
                 <label class="hamburger" id="hamburger">
                     <input type="checkbox" name="" id="hamburger_checkbox">
-                    <div class="bar">
-                        <span class="fill_empty"></span>
-                        <span class="top"></span>
-                        <span class="middle"></span>
-                        <span class="bottom"></span>
+                    <div class="bars">
+                        <span class="fill_empty_bar"></span>
+                        <span id="top_bar" class="top_bar"></span>
+                        <span class="middle_bar"></span>
+                        <span class="bottom_bar"></span>
                     </div>
                 </label>
             </nav>
