hamburger bars on-scroll color change WORKS

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <div class="bars">
                         <span class="fill_empty_bar"></span>
                         <span id="top_bar" class="top_bar"></span>
-                        <span class="middle_bar"></span>
-                        <span class="bottom_bar"></span>
+                        <span id="middle_bar" class="middle_bar"></span>
+                        <span id="bottom_bar" class="bottom_bar"></span>
                     </div>
                 </label>
             </nav>
