--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="house_intro_pic_side" id="house_intro_pic_side">
-                    <img class="house_homepage_img" src="fajntajm_pics/house.jpg">
+                    <img id="house_homepage_img" class="house_homepage_img" src="fajntajm_pics/house.jpg">
                     <img class="house_homepage_img" src="fajntajm_pics/kuchyn_new.jpg">
                     <img class="house_homepage_img" src="fajntajm_pics/meet_room.jpg">
                 </div>
