--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </header>
         <div class="intro_media_content_spacer" id="spacer"></div>                  
         <div class="intro_container">
-            <video class="intro_media_content" autoplay loop muted playsinline>
+            <video class="intro_media_content" autoplay="" loop="" muted="" playsinline="">
                     <source src="intro/fajn_tajm_video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
             </video>
